--- a/_posts/mon-article5/mon-article-5.Rmd
+++ b/_posts/mon-article5/mon-article-5.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Article 5 : Technology In Our Life Today And How It Has Changed"
 description: |
-  How thechnology change our life ?
-  
+  How technology change our life ?
 author:
   - name: Plasman Héloïse
     url: {http://Heloise04.github.io/Heloise_blog/}
