--- a/_posts/mon-article4/mon-article-4.Rmd
+++ b/_posts/mon-article4/mon-article-4.Rmd
@@ -8,6 +8,7 @@ author:
 date: 12-08-2020
 categories:
   - "English for Science"
+  - "Articles"
 output:
   distill::distill_article:
     self_contained: false
