--- a/_posts/mon-article5/mon-article-5.Rmd
+++ b/_posts/mon-article5/mon-article-5.Rmd
@@ -8,6 +8,7 @@ author:
 date: 03-08-2020
 categories:
   - "English for Science"
+  - "Articles"
 output:
   distill::distill_article:
     self_contained: false
