--- a/_posts/mon-article7/mon-article-7.Rmd
+++ b/_posts/mon-article7/mon-article-7.Rmd
@@ -8,6 +8,7 @@ author:
 date: 03-14-2021
 categories:
   - "English for Science"
+  - "Articles"
 output:
   distill::distill_article:
     self_contained: false
