--- a/_posts/meal/meal.Rmd
+++ b/_posts/meal/meal.Rmd
@@ -24,7 +24,8 @@ Here a few thing that I do and that I did in English during my life :
 
 * I always listen to music in English, there isn't a single day that I don't listen to it. 
 
-Update 04th March 2021
+
+Update : 04th of March 2021
 
 * Still listening lots of music and sing even if I know that I'm a bad singer (hihi)
 
@@ -33,4 +34,6 @@ Update 04th March 2021
 * Watch some videos on Youtube 
 
 
+Update : 14th of April 2021
 
+Same as before
